[package]
name = "sortable-js"
version = "0.1.6+js.1.15.2.patched.1"
license = "MIT"
categories = ["api-bindings", "gui", "wasm", "web-programming"]
keywords = ["webui"]
description = "Rusty bindings to SortableJS, to build sortable lists in wasm"
repository = "https://github.com/Ekleog/sortable-js-rs"
edition = "2021"
exclude = ["shell.nix", "nix/*"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["DomRect", "Element", "HtmlElement"] }
